--- a/app/src/main/res/layout/movies_adapter.xml
+++ b/app/src/main/res/layout/movies_adapter.xml
@@ -6,6 +6,7 @@
 
     <ImageView
         android:id="@+id/iv_movie"
+        android:transitionName="@string/poster_transition"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/movie_poster"
