--- a/app/src/main/res/layout/movies_adapter.xml
+++ b/app/src/main/res/layout/movies_adapter.xml
@@ -6,11 +6,11 @@
 
     <ImageView
         android:id="@+id/iv_movie"
-        android:transitionName="@string/poster_transition"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/movie_poster"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:transitionName="@string/poster_transition" />
 
     <TextView
         android:id="@+id/tv_title"
@@ -18,9 +18,10 @@
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:background="@color/scrimText"
-        android:paddingBottom="8dp"
-        android:paddingStart="8dp"
-        android:paddingTop="8dp"
+        android:paddingBottom="@dimen/padding_8"
+        android:paddingStart="@dimen/padding_8"
+        android:paddingEnd="@dimen/padding_8"
+        android:paddingTop="@dimen/padding_8"
         android:textColor="@android:color/white"
         android:textSize="18sp" />
 </RelativeLayout>
