--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="scrimText">#80000000</color>
+    <color name="myFavoriteColorPrimary">#F44336</color>
+    <color name="myFavoriteColorPrimaryDark">#D32F2F</color>
+    <color name="myFavoriteColorAccent">#F4A236</color>
 </resources>
