--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,11 +8,17 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="BlackTheme" parent="AppTheme">
-        <item name="colorPrimary">#F44336</item>
-        <item name="colorPrimaryDark">#D32F2F</item>
-        <item name="colorAccent">#F4A236</item>
+    <style name="MyFavoriteTheme" parent="AppTheme">
+        <item name="colorPrimary">@color/myFavoriteColorPrimary</item>
+        <item name="colorPrimaryDark">@color/myFavoriteColorPrimaryDark</item>
+        <item name="colorAccent">@color/myFavoriteColorAccent</item>
         <item name="android:windowContentTransitions">true</item>
+    </style>
+
+    <style name="Divider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">?android:attr/listDivider</item>
     </style>
 
 </resources>
