--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -52,7 +52,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="La Prophétie de l'horloge" />
+            tools:text="Predator" />
 
         <RelativeLayout
             android:id="@+id/rl_wrapper_release_date"
@@ -111,7 +111,7 @@
                 android:layout_toEndOf="@+id/tv_original_title_label"
                 android:textColor="@android:color/black"
                 android:textStyle="bold"
-                tools:text="La Prophétie de l'horloge" />
+                tools:text="Predator" />
         </RelativeLayout>
 
         <RelativeLayout
