--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="myFavoriteColorPrimaryDark">#D32F2F</color>
     <color name="myFavoriteColorAccent">#F4A236</color>
     <color name="grey">#FF424242</color>
+    <color name="black">#000000</color>
 </resources>
